Say what the documentation covers now, and settle two open questions
`doc/README.md` gains the API reference section and drops the codox
instructions. `doc/for-committers.md` no longer points at a `project.clj` for
the dependency list, no longer asks the release checklist to bump it, and its
"build API documentation" section is now three lines because there is nothing
to do at release time. `lt.objs.files/resolve` stops using `codox` for one of
its examples, which was a real path when codox built the docs and is not one
now.

Two things that keep getting proposed are recorded as decided rather than
pending, in `doc/context-isolation.md` with a pointer from
`doc/electron-guide.md`:

- `sandbox: true` stays off. It would take Node out of the preload as well, so
  every filesystem call would cross to the main process at the 118x cost
  measured earlier, which needs a coarse-capability redesign. That redesign
  should be judged on its own merits, and it buys less than the step before
  it: once the window has no `require` and reaches the system only through a
  named list, moving where that list is implemented is defence in depth rather
  than a new boundary.
- A content security policy without `unsafe-eval` cannot coexist with
  evaluating the code you are writing, which is the feature Light Table is
  named for. The honest version is `unsafe-eval` with a much narrower
  `connect-src` and `img-src`, which is a different piece of work.

Also corrects the smoke check count, which is 44.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018WW5xyxhXNYzixm76hSAZK